crates/keron-lang/tests/corpus/errors/parse/for_three_idents.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `,`, expected `)`
  --> 2:10
  |
2 | for (a, b, c) in m { reconcile c }
  |          ^
